--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="team-member">
                 <img src="henry.jpg" alt="Henry von der Schulenburg" class="member-image">
                 <h3>Henry von der Schulenburg</h3>
-                <p class="role">Huster</p>
+                <p class="role">Hustler</p>
                 <a href="https://www.linkedin.com/in/henry-von-der-schulenburg-762184227/" target="_blank" class="linkedin-link">
                     <img src="https://cdn.prod.website-files.com/629f8e20ed4e3259ae63762f/6768682956c25a3a99ee81ca_LinkedIn%202.png" alt="LinkedIn" class="linkedin-icon">
                 </a>
