--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <div class="logo-container">
                 <img src="UniVerseLogo.png" alt="UniVerse Logo" class="main-logo">
                 <img src="UniVerseLogo2.png" alt="UniVerse Logo 2" class="secondary-logo">
+                <span class="logo-separator">|</span>
+                <div class="stanford-wrapper">
+                    <img src="StanfordLogo.avif" alt="Stanford University Logo" class="stanford-logo">
+                    <span class="stanford-text">Stanford University</span>
+                </div>
             </div>
             <div class="nav-links">
                 <a href="#top" class="nav-item active">Home</a>
