--- a/index.html
+++ b/index.html
@@ -110,23 +110,41 @@
         
         <div class="testimonials-grid">
             <div class="testimonial-card">
-                <p class="quote">"I'm worried that I'm going to graduate and not be able to make the most of Stanford."</p>
-                <div class="testimonial-author">
-                    <p class="author-name">Student from Stanford University</p>
+                <div class="testimonial-header">
+                    <img src="p1.png" alt="John Doe" class="testimonial-image">
+                    <div class="testimonial-text">
+                        <p class="quote">"I'm worried that I'm going to graduate and not be able to make the most of Stanford."</p>
+                        <div class="testimonial-author">
+                            <p class="author-name">Levenia Sim</p>
+                            <p class="author-institution">Student from Stanford University</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="testimonial-card">
-                <p class="quote">"I've never met my master's mentor. I've emailed her---she did not get back to me."</p>
-                <div class="testimonial-author">
-                    <p class="author-name">Student from Massachusetts Institute of Technology</p>
+                <div class="testimonial-header">
+                    <img src="p2.png" alt="John Doe" class="testimonial-image">
+                    <div class="testimonial-text">
+                        <p class="quote">"I've never met my master's mentor. I've emailed her---she did not get back to me."</p>
+                        <div class="testimonial-author">
+                            <p class="author-name">Megan Sun</p>
+                            <p class="author-institution">Student from Massachusetts Institute of Technology</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="testimonial-card">
-                <p class="quote">"My Academic Advisor screwed me. I had to say at school for another semester for one class and spend an extra $30k."</p>
-                <div class="testimonial-author">
-                    <p class="author-name">Student from Arizona State University</p>
+                <div class="testimonial-header">
+                    <img src="p3.jpg" alt="John Doe" class="testimonial-image">
+                    <div class="testimonial-text">
+                        <p class="quote">"My Academic Advisor screwed me. I had to say at school for another semester for one class and spend an extra $30k."</p>
+                        <div class="testimonial-author">
+                            <p class="author-name">Paul Oscislawski</p>
+                            <p class="author-institution">Student from Arizona State University</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
