--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#features" class="nav-item">Features</a>
                 <a href="#testimonials" class="nav-item">Testimonials</a>
                 <a href="#about" class="nav-item">About</a>
-                <a href="https://form.typeform.com/to/c4al93oK" target="_blank" class="nav-item cta-button">Apply for beta</a>
+                <a href="https://stanford-ai-assistant.streamlit.app/" target="_blank" class="nav-item cta-button">Try the beta</a>
             </div>
         </nav>
         
@@ -40,7 +40,7 @@
                 </video>
             </div>
             
-            <a href="https://form.typeform.com/to/c4al93oK" target="_blank" class="app-download">
+            <a href="https://stanford-ai-assistant.streamlit.app/" target="_blank" class="app-download">
                 <span>Join 100+ Stanford students & get early access to UniVerse, your AI academic advisor! 🎓</span>
             </a>
         </div>
